--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "thumbnail",
     "snapshot",
     "wkhtmltopdf",
+	"wkhtmltoimage",
+	"wkhtmltox",
     "convert",
     "binary",
     "htmltopdf",
